--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
     <!-- Navigation Bar -->
     <nav>
-        <a href="index.html.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="Blogs.html">Blogs</a>
         <a href="Contact%20Us.html">Contact Us</a>
         <a href="About%20Us.html" class="active">About Us</a>
