--- a/Contact Us.html
+++ b/Contact Us.html
@@ -143,7 +143,7 @@
 
   <!-- Navigation Bar -->
   <nav>
-    <a href="index.html.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="blogs.html">Blogs</a>
     <a href="Contact%20Us.html" class="active">Contact Us</a>
     <a href="About%20Us.html" class="active">About Us</a>
