--- a/Blogs.html
+++ b/Blogs.html
@@ -114,7 +114,7 @@
   <!-- Navigation Bar -->
   <nav>
     <a href="index.html">Home</a>
-    <a href="blogs.html" class="active">Blogs</a>
+    <a href="Blogs.html" class="active">Blogs</a>
     <a href="Contact%20Us.html">Contact Us</a>
     <a href="About%20Us.html" class="active">About Us</a>
   </nav>
