--- a/Contact Us.html
+++ b/Contact Us.html
@@ -144,7 +144,7 @@
   <!-- Navigation Bar -->
   <nav>
     <a href="index.html">Home</a>
-    <a href="blogs.html">Blogs</a>
+    <a href="Blogs.html">Blogs</a>
     <a href="Contact%20Us.html" class="active">Contact Us</a>
     <a href="About%20Us.html" class="active">About Us</a>
   </nav>
